# verbio_translate

./: CMakeLists.txt  README
include/: dictionary.hpp  translator.hpp
src/: dictionary.cpp  main.cpp  translator.cpp
