PROJECT(UAConnection)
CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
SET(CMAKE_CXX_STANDARD 11) # C++11...
SET(CMAKE_CXX_STANDARD_REQUIRED ON) #...is required...
SET(CMAKE_CXX_EXTENSIONS OFF) #...without compiler extensions like gnu++11
SET(CMAKE CXX FLAGS “-Wall”)
INCLUDE_DIRECTORIES("./include")

SET(EXECNAME_TRANSLATE translate)
FILE(GLOB PROJECT_SRC SRC "./src/*.cpp")
ADD_EXECUTABLE(${EXECNAME_TRANSLATE} 
				${PROJECT_SRC})
